--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ h2 {
   font-size: 40px;
   line-height: 40px;
   etter-spacing: -0.5px;
-  color: #ffffff;
+  color: #808080;
   font-weight: 700;
 }
 
